welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:7: error: reassignment to val
	if ( (day=1 || day=2 || day=3 || day=4 || day=5) && vacation==true) { 
                 ^